--- a/DevNet/DevNet/Views/Home/About.cshtml
+++ b/DevNet/DevNet/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
-    ViewBag.Title = "About";
+    //ViewBag.Title = "About";
+    ViewBag.Title = "DevTV";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h3>@ViewBag.Message</h3>*@
+<h4>Please enjoy browsing videos posted by other DevNet members.  Feel free to upload your own.</h4><br>
 
-<p>Use this area to provide additional information.</p>
+@*<p>Use this area to provide additional information.</p>*@
+
+<div>
+    <img src="~/Content/medium_video_gallery.png" alt="Video Gallery" style="width:1000px;height:613px">
+</div>
+<br>
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Upload Video" class="btn btn-default" />
+    </div>
+</div>
