--- a/DevNet/DevNet/Content/bootstrap.css
+++ b/DevNet/DevNet/Content/bootstrap.css
@@ -314,8 +314,12 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+  /*color: #333333;
+  background-color: #ffffff;*/
+
+
+  background-color: #333;
+  color: #ee356c;
 }
 
 input,
