--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -3,13 +3,22 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>DEVNET</h1>
+    <p class="lead">DevNet is a portal that serves as an online community for developers and IT employeers to network and talk about technology as well as share knowledge.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
+        <h2>ASP.NET RSS Feed</h2>
+        <ul>
+           <li>Learn about the latest in ASP.NET Web API 2</li>
+           <li>Build realtime web applications with SignalR.</li>
+           <li>Deploy a Mobile-Friendly ASP.NET MVC 5 Web Application on Windows Azure Web Sites</li>
+           <li>Develop iPhone applications with ASP.NET</li>
+        </ul>
+    </div>
+    @*<div class="col-md-4">
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -17,8 +26,8 @@
             for enjoyable, agile development.
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
+    </div>*@
+    @*<div class="col-md-4">
         <h2>Get more libraries</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
@@ -27,5 +36,5 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    </div>*@
 </div>
