--- a/DevNet/DevNet/Content/bootstrap.css
+++ b/DevNet/DevNet/Content/bootstrap.css
@@ -318,8 +318,11 @@ body {
   background-color: #ffffff;*/
 
 
-  background-color: #333;
-  color: #ee356c;
+  /*background-color: #333;*/
+  /*color: #ee356c;*/
+
+  background-color: #000;
+   color: #ff3c59;
 }
 
 input,
