--- a/DevNet/DevNet/Views/Shared/_Layout.cshtml
+++ b/DevNet/DevNet/Views/Shared/_Layout.cshtml
@@ -32,11 +32,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Manage Site", "Manage", "Home")</li>
                     <li>@Html.ActionLink("Dashboard", "About", "Home")</li>
                     <li>@Html.ActionLink("DevTV", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Profile", "Contact", "Home")</li>
+                    @if (Request.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
+                        <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
