Added documentation enhanced look and feel using three.js

--- a/DevNet/DevNet/Content/bootstrap.css
+++ b/DevNet/DevNet/Content/bootstrap.css
@@ -4943,8 +4943,8 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
-  background-image: url(full_logo.png);
+  background-color: #000;
+  background-image: url(logos/full_logo.png);
   height: 800px;
 
 }
