--- a/DevNet/DevNet/Views/Home/Contact.cshtml
+++ b/DevNet/DevNet/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     //ViewBag.Title = "Contact";
-    //ViewBag.Title = "Profile";
-    ViewBag.Title = "Video Upload";
+    ViewBag.Title = "Profile";
+   
 }
 <h2>@ViewBag.Title.</h2>
 
@@ -20,22 +20,8 @@
 </address>*@
 
 @*<h4>Edit your profile.</h4>*@
-<h4>Browse for your video to upload.</h4>
-<hr />
 
-@*Dummy Data used for Video Upload screen shot*@
 
-<div class="form-group">
-    <div class="col-md-2 control-label">Browse for video</div>
-    <div class="col-md-10">
-        <input class="form-control" value="Browse.." /><br>
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" class="btn btn-default" value="Upload Video" />
-    </div>
-</div>
 
 @*<div class="form-group">
     <label class="col-md-2 control-label">First Name</label>
