--- a/DevNet/DevNet/Views/Shared/_Layout.cshtml
+++ b/DevNet/DevNet/Views/Shared/_Layout.cshtml
@@ -27,22 +27,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("DevNet Portal", "Index", "DevNet", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("DevNet Portal", "Cover", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Manage Site", "Manage", "Home")</li>
-                    <li>@Html.ActionLink("Dashboard", "About", "Home")</li>
-                    <li>@Html.ActionLink("DevTV", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Profile", "Contact", "Home")</li>
-                    @if (Request.IsAuthenticated && User.IsInRole("Admin"))
-                    {
-                        <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
-                        <li>@Html.ActionLink("UsersAdmin", "Index", "UsersAdmin")</li>
-                    }
-                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -56,16 +43,8 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    <script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
-    <script src="~/Scripts/jquery.validate-vsdoc.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <link href="~/Content/datepicker3.css" rel="stylesheet" />
-
-    <script src="~/Scripts/bootstrap-datepicker.js"></script>
-    <link href="~/Content/Site.css" rel="stylesheet" />
-
+  
     @RenderSection("scripts", required: false)
 </body>
 </html>
