--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     .logo
     {
-        background-image: url(~/Content/logos/full_logo.png);
+        background-image: url(../../Content/logos/full_logo.png);
         z-index: 100;
     }
     .nobullets
