--- a/DevNet/DevNet/Views/Home/Cover.cshtml
+++ b/DevNet/DevNet/Views/Home/Cover.cshtml
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - DevNet Portal</title>
 
-    @Scripts.Render("~/bundles/three")
+    @*@Scripts.Render("~/bundles/three")*@
     
-    @*<script src="~/Scripts/three.min.js"></script>*@
+    <script src="~/Scripts/three.min.js"></script>
     @*<script src="~/Scripts/logo_cube.js"></script>*@
 
  
