--- a/DevNet/DevNet/Content/Site.css
+++ b/DevNet/DevNet/Content/Site.css
@@ -21,7 +21,6 @@ body {
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: #000;
-    /*background-image: url(textures/code.png);*/
     color: #ff005a;
 
     font-family: 'rosario', Arial, verdana;
@@ -30,6 +29,13 @@ body {
     z-index: 50;
     background-attachment: fixed;
 }
+
+
+/*.logo
+{
+    background-image: url(logos/full_logo.png);
+    z-index: 100;
+}*/
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
