--- a/DevNet/DevNet/Content/Site.css
+++ b/DevNet/DevNet/Content/Site.css
@@ -31,11 +31,11 @@ body {
 }
 
 
-/*.logo
+.logo
 {
     background-image: url(logos/full_logo.png);
     z-index: 100;
-}*/
+}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
