--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
    
 
 </style>
-<div class="logo">
+@*<div class="logo">*@
     <div class="jumbotron">
 
         <div class="darkscreen">
@@ -51,4 +51,4 @@
             </div>
 
         </div>*@
-</div>
+@*</div>*@
