--- a/DevNet/DevNet/Content/bootstrap.css
+++ b/DevNet/DevNet/Content/bootstrap.css
@@ -26,6 +26,37 @@
   src: url('../fonts/heavy_data.ttf');
 }
 
+@font-face 
+{
+  font-family: 'rosario';
+  font-size: 14pt;
+  src: url('../fonts/Rosario-Bold.ttf');
+}
+
+
+
+html {
+  font-family: 'rosario', Arial, verdana;
+    font-size: 12pt;
+    background-color: #000;
+    
+    background-image: url(textures/deep-red-fractal.png);
+    z-index: 50;
+    background-attachment: fixed;
+}
+
+
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+   
+    color: #ff005a;
+   
+    background-image: url(textures/deep-red-fractal.png);
+    z-index: 50;
+    background-attachment: fixed;
+}
+
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
 article,
@@ -57,16 +88,6 @@ audio:not([controls]) {
 [hidden] {
   display: none;
 }
-
-
-@font-face 
-{
-  font-family: 'rosario';
-  font-size: 14pt;
-  src: url('../fonts/Rosario-Bold.ttf');
-  
-}
-
 
 
 a:focus {
