--- a/DevNet/DevNet/Content/dashboard.css
+++ b/DevNet/DevNet/Content/dashboard.css
@@ -21,6 +21,10 @@ body {
   color: #ff005a;
 }
 
+h1, h2, h3, h4, h5, h6
+{
+    font-family: 'rosario', Arial, verdana;
+}
 
 /*
  * Global add-ons
