--- a/DevNet/DevNet/Content/Site.css
+++ b/DevNet/DevNet/Content/Site.css
@@ -1,70 +1,38 @@
 ﻿
-
-
-/*.logo
+@font-face 
 {
-    background-image: url(logos/full_logo.png);
-    z-index: 100;
-}*/
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+  font-family: 'heavy_data';
+  font-size: 14pt;
+  src: url('../fonts/heavy_data.ttf');
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+@font-face 
+{
+  font-family: 'rosario';
+   font-size: 14pt;
+  src: url('../fonts/Rosario-Bold.ttf');
 }
 
 
-jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
-  font-size: 21px;
-  font-weight: 200;
-  line-height: 2.1428571435;
-  color: inherit;
-  background-color: #eeeeee;  
-  background-image: url(logos/full_logo.png);
-  height: 800px;
-  z-index: 100;
+
+html {
+    font-family: 'rosario', Arial, verdana;
+    font-size: 12pt;
+    background-color: #000;
+    color: #ff005a;
+  
 }
 
 
-.jumbotron h1 {
-  line-height: 1;
-  color: inherit;
+body {
+    font-family: 'rosario', Arial, verdana;
+    font-size: 12pt;
+    padding-top: 50px;
+    padding-bottom: 20px;
+  
 }
 
-.jumbotron p {
-  line-height: 1.4;
-}
-
-.container .jumbotron {
-  border-radius: 6px;
-}
-
-@media screen and (min-width: 768px) {
-  .jumbotron {
-    padding-top: 48px;
-    padding-bottom: 48px;
-  }
-  .container .jumbotron {
-    padding-right: 60px;
-    padding-left: 60px;
-  }
-  .jumbotron h1 {
-    font-size: 63px;
-  }
+h1, h2, h3, h4, h5, h6
+{
+    font-family: 'rosario', Arial, verdana;
 }
