--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
     {
        
         width: 400px;
-        height: 100%;
+        height: 1000px;
  
         color: #999;
          padding: 25px;
