--- a/DevNet/DevNet/Views/Shared/_Layout.cshtml
+++ b/DevNet/DevNet/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 @Html.ActionLink("DevNet Portal", "Cover", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                @Html.Partial("_LoginPartial")
+                @Html.Partial("_MenuPartial")
             </div>
         </div>
     </div>
