--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
                         RSSFeedModel.RssFeed = rssFeed.GetRSSFeed(strRecommendedRSSFeedName);
                         RSSFeedModel.RssFeedName = strRecommendedRSSFeedName;
                     }
+                    break;
                    
                 }
 
